create sample modules using jquery & jquery-ui

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>jQuery + Webpack</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <p>Date: <input type="text" id="datepicker"></p>
+    </div>
   </body>
   <script src="dist/bundle.js"></script>
 </html>
