--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="app">
-      <p>Date: <input type="text" id="datepicker"></p>
+      <input type="text" id="datepicker" placeholder="Select Date">
     </div>
   </body>
   <script src="dist/bundle.js"></script>
