--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>jQuery + Webpack</title>
+    <link rel="stylesheet" href="dist/main.css">
   </head>
   <body>
     <div id="app">
       <input type="text" id="datepicker" placeholder="Select Date">
     </div>
   </body>
-  <script src="dist/bundle.js"></script>
+  <script src="dist/main.js"></script>
 </html>
